--- a/src/kivyApp/healthCanada.kv
+++ b/src/kivyApp/healthCanada.kv
@@ -1,5 +1,8 @@
 HealthCanada:
-	name: 'health'
+	name: 'Health Canada'
+	port: 10023
+	address: 'localhost'
+	hostId: u'9F32383582053809'
 	TabbedPanel:
 		do_default_tab: False
 		tab_width: 200
