commiting since I'm going to switch from sqlite3 to mongodb

--- a/src/kivyApp/healthCanada.kv
+++ b/src/kivyApp/healthCanada.kv
@@ -102,7 +102,7 @@ HealthCanada:
 								orientation: 'vertical'
 
 								Label:
-									text: 'Age: {}   Sex: {}   Weight: {}   Boold Type: {}'
+									text: 'Age: {}   Gender: {}   Weight: {}   Blood Type: {}'
 									
 								BoxLayout:
 									orientation: 'horizontal'
